crates/runtime/tests/models/snapshots/integration_models__models__search__multi_column_with_where_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response(resp, round_scores)"
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.03",
      "dataset": "qs",
      "matches": {
        "answer": [
          "A relation is partial if there is an element in the domain that "
        ],
        "question": [
          "What is the definition of a partial relation?"
        ]
      },
      "primary_key": {
        "id": 921
      }
    }
  ]
}
