crates/runtime/tests/models/snapshots/integration_models__models__search__multi_embedding_models_additional_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(response)
snapshot_kind: text
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "data": {
        "cp_catalog_number": 1
      },
      "dataset": "multi_embedding_models",
      "matches": {
        "cp_department": [
          "DEPARTMENT"
        ],
        "cp_description": [
          "In general basic characters welcome. Clearly lively friends conv"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 1
      },
      "_score": "0.03"
    },
    {
      "data": {
        "cp_catalog_number": 1
      },
      "dataset": "multi_embedding_models",
      "matches": {
        "cp_department": [
          "DEPARTMENT"
        ],
        "cp_description": [
          "Even democratic stairs would know happy investigations. Histo"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 2
      },
      "_score": "0.03"
    }
  ]
}
